--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
       - db
     environment:
       ME_CONFIG_MONGODB_URL: mongodb://jesuis:admin@db:27017
-      ME_CONFIG_MONGODB_ADMINUSERNAME: admin
+      ME_CONFIG_MONGODB_ADMINUSERNAME: jesuis
       ME_CONFIG_MONGODB_ADMINPASSWORD: admin
       ME_CONFIG_BASICAUTH: false
     ports:
