--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,8 @@ services:
     volumes:
       - ./mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
       - db-data:/data/db
+    command:
+      - --auth
 
   db-interface:
     image: mongo-express:1.0.2
@@ -24,16 +26,20 @@ services:
     links:
       - db
     environment:
-      ME_CONFIG_MONGODB_URL: mongodb://jesuis:admin@db:27017
+      ME_CONFIG_MONGODB_SERVER: db
       ME_CONFIG_MONGODB_ADMINUSERNAME: jesuis
       ME_CONFIG_MONGODB_ADMINPASSWORD: admin
-      ME_CONFIG_BASICAUTH: false
+      ME_CONFIG_BASICAUTH_USERNAME: admin
+      ME_CONFIG_BASICAUTH_PASSWORD: admin
+      ME_CONFIG_MONGODB_PORT: 27017
     ports:
       - 8081:8081
 
   backend:
     build: ./backend/
     restart: always
+    networks:
+      - webshop
     depends_on:
       - db
     links:
@@ -44,6 +50,8 @@ services:
   frontend:
     build: ./client
     restart: always
+    networks:
+      - webshop
     ports:
       - 3000:3000
 
