--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       - 27017:27017
     volumes:
       - ./mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
-      - db-data:/data/db
+      - db-storage:/data/db
     command:
       - --auth
 
@@ -56,7 +56,7 @@ services:
       - 3000:3000
 
 volumes:
-  db-data:
+  db-storage:
 networks:
   webshop:
     driver: bridge
