Feat: Update docker compose to use new database image

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   db:
-    image: mongo:7.0.12
+    build: ./db
     restart: on-failure
     networks:
       - webshop
@@ -11,7 +11,6 @@ services:
     ports:
       - 27017:27017
     volumes:
-      - ./mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
       - db-storage:/data/db
     command:
       - --auth
